--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@
   /* Header Styles */
   
   header {
-    background-color: #2e865f;
+    background-color: #25c6ee;
     padding: 20px;
     text-align: center;
     color: #fff;
