--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@
   /* Footer Styles */
   
   footer {
-    background-color: #2e865f;
+    background-color: #25c6ee;
     padding: 10px;
     text-align: center;
     color: #fff;
