--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@
     background-color: #25c6ee;
     padding: 10px;
     text-align: center;
-    color: #fff;
+    color: #113264;
   }
   
   footer p {
