--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@
   }
   
   section {
-    background-color: #fff;
+    background-color: #58a2df;
     padding: 20px;
     margin-bottom: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -69,7 +69,7 @@
     background-color: #25c6ee;
     padding: 10px;
     text-align: center;
-    color: #113264;
+    color: #ffffff;
   }
   
   footer p {
