--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@
     align-items: center;
     padding: 20px;
   }
-  
+
   section {
     background-color: #ffffff;
     padding: 20px;
@@ -69,7 +69,7 @@
     background-color: #25c6ee;
     padding: 10px;
     text-align: center;
-    color: #6dbcca;
+    color: #ffffff;
   }
   
   footer p {
