--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     line-height: 1.6;
     color: #333;
     background-color: #f9f9f9;
-    background-image: url(https://images.app.goo.gl/84LyJAFBQEjgZLaR8);
+    background-image: url(Agrofamilias.jpg);
   }
   
   h1, h2, h3, h4, h5, h6 {
