--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
     color: #333;
     background-color: #f9f9f9;
     background-image: url(Agrofamilias.jpg);
+    background-repeat: no-repeat;
   }
   
   h1, h2, h3, h4, h5, h6 {
