--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
     background-color: #f9f9f9;
     background-image: url(Agrofamilias.jpg);
     background-repeat: no-repeat;
+    background-size: 100%;
   }
   
   h1, h2, h3, h4, h5, h6 {
