--- a/style.css
+++ b/style.css
@@ -11,9 +11,6 @@
     line-height: 1.6;
     color: #333;
     background-color: #f9f9f9;
-    background-image: url(Agrofamilias.jpg);
-    background-repeat: no-repeat;
-    background-size: 100%;
   }
   
   h1, h2, h3, h4, h5, h6 {
@@ -97,4 +94,8 @@
     h2 {
       font-size: 18px;
     }
+  }
+
+  .container{
+    display-flex
   }
