--- a/style.css
+++ b/style.css
@@ -94,8 +94,19 @@
       font-size: 18px;
     }
   }
+  .elementos{
+    display:flex;
+
+  }
+  
   .container{
+    width: 33px; ;
     border:2px solid rgb(1, 1, 22);
     padding: 28px;
     text-align: center;
+  }
+
+  .elementos_container-imagem{
+    width: 300px;
+    height: 300px;
   }
